@@ -578,11 +578,6 @@ op_cp(ops_t *ops, void *data, const char src[], const char dst[],
 #endif
 	}
 
-	if(ops != NULL && conflict_action == CA_OVERWRITE)
-	{
-		ops->crp = CRP_OVERWRITE_ALL;
-	}
-
 	io_args_t args = {
 		.arg1.src = src,
 		.arg2.dst = dst,
@@ -691,6 +686,7 @@ op_mv(ops_t *ops, void *data, const char src[], const char dst[],
 				.data_sync = (ops == NULL ? cfg.data_sync : ops->data_sync),
 			},
 		};
+
 		result = exec_io_op(ops, &ior_mv, &args, data == NULL);
 	}
 
